# compilers

./: .clang-format  README.md
01_peephole_optimization/: README.md  apply.sh  discard.sh
01_peephole_optimization/cpp/: AdditionZeroSample.cpp  SubtractionZeroSample.cpp  main.cpp
01_peephole_optimization/ir/: AdditionZeroBaseline.ll  AdditionZeroOptimized.ll  SubtractionZeroBaseline.ll  SubtractionZeroOptimized.ll
01_peephole_optimization/llvm-project/llvm/lib/Transforms/: CMakeLists.txt
02_loop_invariant_code_motion/: README.md  apply.sh  discard.sh
02_loop_invariant_code_motion/cpp/: licm_10.cpp  licm_20.cpp  licm_5.cpp  licm_div_10.cpp  licm_div_20.cpp  licm_div_5.cpp
02_loop_invariant_code_motion/docs/: report.docx
02_loop_invariant_code_motion/ir/: licm_10_O0.ll  licm_10_O1.ll  licm_10_O1_dirty.ll  licm_20_O0.ll  licm_20_O1.ll  licm_20_O1_dirty.ll  licm_5_O0.ll  licm_5_O1.ll  licm_5_O1_dirty.ll  licm_div_10_O0.ll  licm_div_10_O1.ll  licm_div_10_O1_dirty.ll  licm_div_20_O0.ll  licm_div_20_O1.ll  licm_div_20_O1_dirty.ll  licm_div_5_O0.ll  licm_div_5_O1.ll  licm_div_5_O1_dirty.ll
03_vectorization/: README.md
03_vectorization/cpp/: benchmark_app.cpp  test5.hpp
03_vectorization/docs/: report.docx
03_vectorization/ir/: NoVectorizationNoUnroll.ll  NoVectorizationWithUnroll.ll  WithVectorizationNoUnroll.ll  WithVectorizationWithUnroll.ll
04_c_style_cast_checker/: README.md
04_c_style_cast_checker/cpp/: CMakeLists.txt  main.cpp  test.cpp
patches/: llvm-unknown-sources-remove-errors.patch
(+4 files in other folders)
